# compose-selenium-python-template

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml
app/: Dockerfile  requirements.txt
compose_selenium_python_template/: cli.py
scripts/: main.py
