[tool.poetry]
name = "compose-selenium-python-template"
version = "0.0.0"
description = ""
authors = ["aoirint <aoirint@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
selenium = "^4.12.0"


[tool.poetry.group.dev.dependencies]
pysen = "^0.10.5"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"
mypy = "^1.5.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
